<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:id="@+id/placeholderImageView"
        android:contentDescription="@string/imgageOfCar"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/placeholderimg"
        android:layout_weight="0.3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/placeholderCarsNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/notAvailablePlaceholder" />

        <TextView
            android:id="@+id/placeholderRegoNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.19"
            android:text="@string/notAvailablePlaceholder" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
            android:id="@+id/placeholderCarMake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.19"
            android:text="@string/notAvailablePlaceholder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spaceFiller"/>

            <TextView
                android:id="@+id/placeholderYearModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.19"
                android:text="@string/notAvailablePlaceholder" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kmsDriven"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spaceFiller"/>

            <TextView
                android:id="@+id/placeholderKmsDriven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notAvailablePlaceholder"/>

        </LinearLayout>



    </LinearLayout>




</LinearLayout>